--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,22 @@ body {
     margin: 0;
     padding: 0;
     color: #333;
+    background: linear-gradient(135deg, #f9e7bb, #e97cbb, #3d47d9);
+    background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 #new-quote {
@@ -62,10 +78,6 @@ button {
 
 button:hover {
     background-color: #444;
-}
-
-body {
-    background: linear-gradient(135deg, #f9e7bb, #e97cbb, #3d47d9);
 }
 
 @media only screen and (max-width: 600px) {
